--- a/config/cloud_controller.yml
+++ b/config/cloud_controller.yml
@@ -82,6 +82,15 @@ loggregator:
   router: "127.0.0.1:3456"
   internal_url: 'http://loggregator-trafficcontroller.service.cf.internal:8081'
 
+logcache:
+  host: 'http://doppler.service.cf.internal'
+  port: 8080
+
+logcache_tls:
+  key_file: 'spec/fixtures/log_cache.key'
+  cert_file: 'spec/fixtures/log_cache.crt'
+  ca_file: 'spec/fixtures/log_cache_ca.crt'
+
 doppler:
   url: 'wss://doppler.example.com:443'
 
