WIP: Start using logcache for stats requests instead of trafficcontroller
- Add temporary_use_logcache feature flag to use logcache

- Use the logcache client instead of the trafficcontroller client

[#159042437]

Signed-off-by: Eric Promislow <eric.promislow@suse.com>

--- a/config/cloud_controller.yml
+++ b/config/cloud_controller.yml
@@ -80,6 +80,9 @@ loggregator:
   router: "127.0.0.1:3456"
   internal_url: 'http://loggregator-trafficcontroller.service.cf.internal:8081'
 
+logcache:
+  internal_url: 'http://doppler.service.cf.internal:8080'
+
 doppler:
   url: 'wss://doppler.example.com:443'
 
