--- a/config/cloud_controller.yml
+++ b/config/cloud_controller.yml
@@ -83,7 +83,13 @@ loggregator:
   internal_url: 'http://loggregator-trafficcontroller.service.cf.internal:8081'
 
 logcache:
-  internal_url: 'http://doppler.service.cf.internal:8080'
+  host: 'http://doppler.service.cf.internal'
+  port: 8080
+
+logcache_tls:
+  key_file: 'spec/fixtures/log_cache.key'
+  cert_file: 'spec/fixtures/log_cache.crt'
+  ca_file: 'spec/fixtures/log_cache_ca.crt'
 
 doppler:
   url: 'wss://doppler.example.com:443'
