--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
   Exclude:
     - vendor/**/*
     - lib/diego/bbs/models/**/*
+    - lib/logcache/v2/**/*
 
 Bundler/DuplicatedGem:
   Enabled: false
